# civitas

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  proposal.yml
.github/workflows/: backend-ci.yml  codeql.yml  frontend-ci.yml
backend/: Cargo.toml
backend/.sqlx/: query-00f53d237b03fb608893aa08be4511948d2f96bf89ac125a1dd9a0cd61d3ab1e.json  query-025e89e5419745881228b8a0e2c4eb7451624b5a57fc690852c5545b359dc079.json  query-0300d0cd123a1388a89663717233710a4986b0aee73df67f57b2c7409175002f.json  query-047b65320d894a4d3eafc08b6753869637911f134d83cd4026b9f270d31efaa6.json  query-072a6660de4782cff11f4360276254fd218a67439fc8cae9c21978057db42ada.json  query-0b7a84f57c6713dc0e48daca6e47299f93f8bf5cf12cfacc34bc5d025a13a76c.json  query-15562d102f3c2eb94c709c57c6a3f6644338728f3a4c4c5c6dd17db30f5f0a31.json  query-1a1c123cdd631cd38831f2e0be1d461e3f9bcb39be84c93fb2bfdbabf600fd48.json  query-1ed8b997a9471296799c274db1312e7c7bbf62f404104f4d40eca082b3ea7027.json  query-2c4924d972d18db9917f8b3166b889244bdabc261c15c06b444abbd0e859960d.json  query-30132f674fb35d6ebe7a3fc3da69af256585a80a6fe1487a33dd0225b95c78b3.json  query-31fe08ec451dfbcde34b3ab5b7829d0fd6a85deca99b1f90db78a97bc15a9332.json  query-32a0325fe83c9d35041189e6b95f2e8eecea5f8c75efc8465e7bbc75c83e9c82.json  query-42911dcab4d7b7e5f6be4bb2bbaefa0b5f779eed3ca7cc358b02d500aff7696f.json  query-4373bd1f7d7b271ee01b53653a9eb38cba5d3adec9d42f937c798b0536bcfabb.json  query-4454d60ea28de3e3c8b549e3edd440a15d1baeb1a6b5058862e82461a0df2308.json  query-46f453a201f030c0f651f6dd85fe099e68713a6fe170ebb159bb66d28409d28b.json  query-570d39a796d40969ce8b5f8a1e2b6b63f04e5353805165e0b76db8583c393762.json  query-5a8f0659fd858e7c53f6634abae3d9d462fbc4862e5fcccc9884e8c8254fc68e.json  query-5b97b8fb4e416d62a3e4eccfa1018b4c8b21227bac7b9b709a0cbc54d71357b8.json  query-5f1b75dd96f13015e8b68a8877cf101a3564bfbb372bba0572a78187153a5bdd.json  query-66dbb3fda3cc94b4ace423d54762790317d34ed1a7aa393c937ae38fab172dfa.json  query-677e860588501abfb6ebf2cb6c8020f485b3a0f85408118cdac78fcf048d3d9e.json  query-753b2e8b709286ce54b67fbc7f6b7e09376f47406de19b771948e410f8c380bb.json  query-79b44bb3d86d468470a69d62ad360ff76fd1ccc8e26524bfe36c9f9be27d9bbc.json  query-79ff775c636f8f823a56ba826b3d9b6183f389a3d7ca49d38c19bbb105cb2630.json  query-80cf6e30d224e5b706a037fbd6cd4440ed482c82e9c048aecfa8a65bef0eaaf0.json  query-84bc9f00f6ca38b991ad12bd8cbd48e5f0f0cc249c922345a4c75b8577363141.json  query-8be995ac7a49e4e9501868fa83f91b2005592265d1d60c7c1360e37d103c9c42.json  query-9269af2e081ef83f587b73a11b3811e151c3fd3d851924e1461b7490ae8ee751.json  query-951dcd1cb68587a7e61eff812063ca0be505a2a118be4b2660e2fadb2c6aeabd.json  query-9aed0663937f59059bcfd3b5bfb4dd3ab959541e8cd09f7fa4d70b7ce5d4dbc6.json  query-9cef1c0840a548eebb6fe7e34ad4c95808950853c69fc8e89657ad8b8c39214d.json  query-9fc99ac693fbf66e3fd92a2f8a1c6a90098bc3a1d70199389fb156d458d75192.json  query-a37c24d45e70060b115a0c18e622c1422e24795358ec47ce4a1c783f9081e356.json  query-a3db769b3249d550f6cb7ac0f07e12053c299885e3681370aafe865d2c671c35.json  query-a516bc8b6f3c8a13476365985a4ec5d5176a8aec19b376103726fdf60e939589.json  query-ad170fdd13e999cacc3031cefbab4c8e9c9bd82f0fc8f09ff20e6a3821170700.json  query-ade0a91807c000210575b2ca4f9d4ecca629ef7717537a7a5c7a866aeb0d67bb.json  query-b3af1c6c66edfc618945b7dc941c49167ea162f2ce714b06d87833e24595a743.json  (+21 more)
backend/crates/civitas-api/: Cargo.toml
backend/crates/civitas-api/src/: auth_extractor.rs  config.rs  cookies.rs  dto.rs  error.rs  jobs.rs  lib.rs  mailer.rs  main.rs  security.rs  state.rs
backend/crates/civitas-api/src/routes/: auth.rs  comments.rs  delegations.rs  mod.rs  proposals.rs  topics.rs  users.rs  votes.rs
backend/crates/civitas-auth/: Cargo.toml
backend/crates/civitas-auth/src/: lib.rs  login.rs  password.rs  password_reset.rs  register.rs  session.rs  tokens.rs  verification.rs
backend/crates/civitas-core/: Cargo.toml
backend/crates/civitas-core/src/: delegation.rs  eligibility.rs  lib.rs  records.rs  tally.rs
backend/crates/civitas-db/: Cargo.toml
backend/crates/civitas-db/src/: audit.rs  comments.rs  delegations.rs  eligibility.rs  lib.rs  proposals.rs  sessions.rs  tokens.rs  topics.rs  users.rs  votes.rs
backend/crates/civitas-db/tests/: proposals_summaries.rs  topics_audit.rs
backend/crates/civitas-types/: Cargo.toml
backend/crates/civitas-types/bindings/: AuditLogId.ts  CommentId.ts  DelegationId.ts  ProposalId.ts  ProposalStatus.ts  Stance.ts  TopicId.ts  UserId.ts  VoteChoice.ts  VoteId.ts  Weight.ts
backend/crates/civitas-types/src/: choice.rs  ids.rs  lib.rs  stance.rs  status.rs  weight.rs
backend/migrations/: 20260504000000_initial_schema.sql  20260504121500_initial_schema.sql
docker/: Caddyfile  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
docs/: roadmap.md
docs/architecture/: data-model.md  delegation.md  deliberation.md  identity.md  overview.md  voting.md
docs/development/: backend.md  conventions.md  frontend.md  getting-started.md  testing.md
docs/philosophy/: README.md  The_Community_Restored_Manifesto.docx  The_Community_Restored_Manifesto.md
frontend/: .env.example  .prettierignore  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.css  app.d.ts  app.html  hooks.server.ts
frontend/src/lib/api/: auth.ts  client.ts  comments.ts  delegations.ts  errors.ts  proposals.ts  topics.ts  users.ts  votes.ts
frontend/src/lib/components/: AuditTimeline.svelte  Banner.svelte  Button.svelte  Card.svelte  DeliberationThread.svelte  Markdown.svelte  ProposalCard.svelte  ProposalResults.svelte  StatusBadge.svelte  TallyDisplay.svelte  TextField.svelte  TopicStatsPanel.svelte  (+4 more)
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
frontend/tests/e2e/: README.md  flow.spec.ts  smoke.spec.ts
(+32 files in other folders)
