[package]
name = "civitas-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Civitas HTTP API server (Axum)."

[lints]
workspace = true

[[bin]]
name = "civitas-api"
path = "src/main.rs"

[dependencies]
civitas-types = { workspace = true }
civitas-core  = { workspace = true }
civitas-db    = { workspace = true }
civitas-auth  = { workspace = true }

tokio       = { workspace = true }
axum        = { workspace = true }
axum-extra  = { workspace = true }
async-trait = { workspace = true }
time        = "0.3"
tower      = { workspace = true }
tower-http = { workspace = true }
hyper      = { workspace = true }
sqlx       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
validator  = { workspace = true }
