[package]
name = "civitas-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Authentication and verification for Civitas."

[lints]
workspace = true

[dependencies]
civitas-types = { workspace = true }
civitas-db    = { workspace = true }
argon2        = { workspace = true }
rand          = { workspace = true }
base64        = { workspace = true }
jsonwebtoken  = { workspace = true }
sha2          = { workspace = true }
hex           = { workspace = true }
sqlx          = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
chrono        = { workspace = true }
uuid          = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
validator     = { workspace = true }
